Fix modal button visibility and butter-colored navigation bar on Android

--- a/app.json
+++ b/app.json
@@ -31,6 +31,8 @@
       ],
       "softwareKeyboardLayoutMode": "pan",
       "navigationBar": {
+        "visible": true,
+        "barStyle": "light-content",
         "backgroundColor": "#F5DEB3"
       }
     },
