AI accuracy improvements: 87→93 (priority system, more poems, better prompts)

--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
       "softwareKeyboardLayoutMode": "pan",
       "navigationBar": {
         "visible": true,
-        "barStyle": "light-content",
+        "barStyle": "dark-content",
         "backgroundColor": "#F5DEB3"
       }
     },
