--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dancing-script": "^0.4.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "^1.6.0",
     "expo": "~54.0.0",
+    "expo-font": "~14.0.8",
     "expo-navigation-bar": "~5.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
