--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,39 @@
-node_modules/
-.expo/
-dist/
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# macOS
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-.AppleDouble
-.LSOverride
+*.pem
 
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# EAS
-.eas/
+# local env files
+.env*.local
+.env
 
-# Exclude everything in parent directories
-../*
-Library/
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# data storage
+/data
