--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "hungarian-poetry-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "vers-app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@expo-google-fonts/dancing-script": "^0.4.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "axios": "^1.6.0",
-    "expo": "~54.0.0",
-    "expo-font": "~14.0.8",
-    "expo-navigation-bar": "~5.0.8",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4"
+    "next": "^14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "openai": "^4.47.0",
+    "axios": "^1.6.8",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "babel-preset-expo": "~12.0.3"
-  },
-  "private": true
+    "@types/node": "^20.12.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@types/node-cron": "^3.0.11",
+    "typescript": "^5.4.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0"
+  }
 }
+
