--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "openai": "^4.47.0",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.6.8",
-    "node-cron": "^3.0.3"
+    "next": "^14.2.0",
+    "node-cron": "^3.0.3",
+    "openai": "^4.47.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.0",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/node-cron": "^3.0.11",
-    "typescript": "^5.4.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint-config-next": "^14.2.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.0"
   }
 }
-
